# orders-ms

./: .env.example  docker-compose.yml  dockerfile  package-lock.json  package.json  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20250205205852_order_item/: migration.sql
prisma/migrations/20250207204248_update_order/: migration.sql
prisma/migrations/20250312141336_stripe_payment/: migration.sql
src/: main.ts
src/config/: envs.ts
src/orders/: orders.controller.ts  orders.service.ts
src/orders/dto/: create-order.dto.ts  index.ts  order-pagination.dto.ts  paid-order.dto.ts  update-order-status.dto.ts  update-order.dto.ts
src/orders/enum/: order.enum.ts
src/orders/interfaces/: order-with-products.interface.ts
